--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.4",
     "formik": "^2.4.6",
@@ -12,6 +21,7 @@
     "autoprefixer": "^10.4.19",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
